--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -70,10 +70,11 @@ body::-webkit-scrollbar-track {
 		-webkit-box-pack: center;
 		    -ms-flex-pack: center;
 		        justify-content: center;
-		text-decoration: none;
 		-webkit-box-align: center;
 		    -ms-flex-align: center;
 		        align-items: center;
+		text-decoration: none;
+		align-items: center;
 		background: #3971b1;
 		color: #fff;
 		font-size: 12px;
@@ -83,10 +84,31 @@ body::-webkit-scrollbar-track {
 		cursor: pointer;
 		-webkit-transition: ease-in-out 0.5s all;
 		transition: ease-in-out 0.5s all;
+		position: relative;
 }
 .primaryButton:hover {
 		-webkit-transform: scaleX(1.05);
 		        transform: scaleX(1.05);
+}
+.primaryButton:after {
+		position: absolute;
+		content: "";
+		display: none;
+		background: url("../images/loader.webp") no-repeat center center;
+		width: 20px;
+		height: 20px;
+		right: 15px;
+		background-size: contain;
+		-webkit-filter: brightness(4);
+		        filter: brightness(4);
+}
+.primaryButton.loading {
+		background: gray;
+}
+.primaryButton.loading:after {
+		display: -webkit-box;
+		display: -ms-flexbox;
+		display: flex;
 }
 
 .secondaryButton {
@@ -100,6 +122,56 @@ body::-webkit-scrollbar-track {
 
 input {
 		font-family: var(--font-family-helvetica);
+}
+input.error {
+		outline: 1px solid red !important;
+		border-radius: 6px;
+}
+
+#popup {
+		display: none;
+		position: fixed;
+		height: 100vh;
+		width: 100vw;
+		background: rgba(0, 0, 0, 0.5);
+		top: 0;
+		left: 0;
+}
+#popup.active {
+		display: -webkit-box;
+		display: -ms-flexbox;
+		display: flex;
+		-webkit-box-align: center;
+		    -ms-flex-align: center;
+		        align-items: center;
+		-webkit-box-pack: center;
+		    -ms-flex-pack: center;
+		        justify-content: center;
+		z-index: 10;
+}
+#popup .popupContent {
+		position: relative;
+		background: white;
+		padding: 50px 100px;
+		min-width: 350px;
+		border-radius: 8px;
+		position: absolute;
+		top: 20%;
+		left: 50%;
+		-webkit-transform: translate(-50%, -50%);
+		        transform: translate(-50%, -50%);
+		text-align: center;
+		font-size: 24px;
+		line-height: 36px;
+		color: #383838;
+}
+#popup .popupContent .close {
+		position: absolute;
+		cursor: pointer;
+		top: 10px;
+		right: 10px;
+		height: 30px;
+		width: 30px;
 }
 
 header {
@@ -122,6 +194,7 @@ header .headerInnerWrapper {
 }
 header .headerInnerWrapper .linksWrapper a {
 		margin-right: 46px;
+		position: relative;
 		letter-spacing: 0.26px;
 		line-height: 15px;
 		font-weight: 600;
@@ -132,9 +205,21 @@ header .headerInnerWrapper .linksWrapper a {
 		-webkit-transition: ease-in-out 0.5s all;
 		transition: ease-in-out 0.5s all;
 }
-header .headerInnerWrapper .linksWrapper a:hover {
-		letter-spacing: 1.5px;
-		margin: 0 -1.5px;
+header .headerInnerWrapper .linksWrapper a:after {
+		content: "";
+		position: absolute;
+		bottom: -2px;
+		left: 50%;
+		-webkit-transform: translateX(-50%);
+		        transform: translateX(-50%);
+		width: 0;
+		-webkit-transition: inherit;
+		transition: inherit;
+		height: 1px;
+		background: #3971b1;
+}
+header .headerInnerWrapper .linksWrapper a:hover:after {
+		width: 100%;
 }
 header .headerInnerWrapper .linksWrapper a:last-child {
 		margin-right: 0;
@@ -165,7 +250,7 @@ main .outerWrapper .innerWrapper .lhs:after {
 		position: absolute;
 		background: #f0f0f0;
 		right: 0;
-		top: 0;
+		top: 60px;
 		height: 954px;
 		width: 1px;
 }
@@ -269,15 +354,15 @@ main .outerWrapper .innerWrapper .lhs .formWrapper form select:focus::placeholde
 main .outerWrapper .innerWrapper .lhs .formWrapper form input:focus::placeholder {
 		color: #b3b3b3;
 }
-main .outerWrapper .innerWrapper .lhs .formWrapper form button {
-		margin-top: 32px;
-}
 main .outerWrapper .innerWrapper .lhs .formWrapper form .selectWrapper {
 		position: relative;
 		width: 100%;
 		margin-bottom: 0;
 		padding: 0;
 		border: none;
+}
+main .outerWrapper .innerWrapper .lhs .formWrapper form .selectWrapper:nth-last-child(2) {
+		margin-bottom: 32px;
 }
 main .outerWrapper .innerWrapper .lhs .formWrapper form .selectWrapper:after {
 		content: "";
@@ -428,6 +513,8 @@ main .outerWrapper .innerWrapper .rhs .map::before {
 		background-size: contain;
 		top: 415px;
 		left: 253px;
+		-webkit-animation: breathe 2.8s ease-in-out infinite;
+		        animation: breathe 2.8s ease-in-out infinite;
 }
 main .outerWrapper .innerWrapper .rhs .map .mapText {
 		color: #afafaf;
@@ -547,6 +634,25 @@ footer .primaryFooterOuterWrapper .primaryFooterInnerWrapper .lhs .linksWrapper 
 		font-family: inherit;
 		text-decoration: none;
 		color: inherit;
+		position: relative;
+		-webkit-transition: ease-in-out 0.5s all;
+		transition: ease-in-out 0.5s all;
+}
+footer .primaryFooterOuterWrapper .primaryFooterInnerWrapper .lhs .linksWrapper ul li a:after {
+		content: "";
+		position: absolute;
+		bottom: -2px;
+		left: 50%;
+		-webkit-transform: translateX(-50%);
+		        transform: translateX(-50%);
+		width: 0;
+		-webkit-transition: inherit;
+		transition: inherit;
+		height: 1px;
+		background: #3971b1;
+}
+footer .primaryFooterOuterWrapper .primaryFooterInnerWrapper .lhs .linksWrapper ul li a:hover:after {
+		width: 100%;
 }
 footer .primaryFooterOuterWrapper .primaryFooterInnerWrapper .rhs .newsLetter {
 		display: -webkit-box;
@@ -690,6 +796,22 @@ footer .secondaryFooterOuterWrapper .secondaryFooterInnerWrapper .secondaryChild
 		-webkit-box-align: center;
 		    -ms-flex-align: center;
 		        align-items: center;
+		margin-right: 13px;
+		position: relative;
+		-webkit-transition: ease-in-out 0.5s all;
+		transition: ease-in-out 0.5s all;
+}
+footer .secondaryFooterOuterWrapper .secondaryFooterInnerWrapper .secondaryChild.socials a:last-child {
+		margin-right: 0;
+}
+footer .secondaryFooterOuterWrapper .secondaryFooterInnerWrapper .secondaryChild.socials a > img {
+		height: 18px;
+		-webkit-transition: inherit;
+		transition: inherit;
+}
+footer .secondaryFooterOuterWrapper .secondaryFooterInnerWrapper .secondaryChild.socials a > img:hover {
+		-webkit-filter: brightness(0) saturate(100%) invert(36%) sepia(30%) saturate(1578%) hue-rotate(182deg) brightness(91%) contrast(85%);
+		        filter: brightness(0) saturate(100%) invert(36%) sepia(30%) saturate(1578%) hue-rotate(182deg) brightness(91%) contrast(85%);
 }
 
 @media screen and (max-width: 2560px) {
@@ -780,6 +902,10 @@ footer .secondaryFooterOuterWrapper .secondaryFooterInnerWrapper .secondaryChild
 @media screen and (max-width: 768px) {
 		.container {
 				--container-width: 580px;
+		}
+		#popup .popupContent {
+				padding: 20px 40px;
+				font-size: 14px;
 		}
 		.logoWrapper a {
 				background: #e4e4e4;
@@ -1106,5 +1232,37 @@ footer .secondaryFooterOuterWrapper .secondaryFooterInnerWrapper .secondaryChild
 		}
 		main .outerWrapper .innerWrapper .rhs .map {
 				--common-var: 23px;
+		}
+}
+@-webkit-keyframes breathe {
+		0%, 100% {
+				-webkit-transform: scale(1);
+				        transform: scale(1);
+				opacity: 1;
+				-webkit-filter: drop-shadow(0 0 0 rgba(57, 113, 177, 0));
+				        filter: drop-shadow(0 0 0 rgba(57, 113, 177, 0));
+		}
+		50% {
+				-webkit-transform: scale(1.12);
+				        transform: scale(1.12);
+				opacity: 0.88;
+				-webkit-filter: drop-shadow(0 0 12px rgba(57, 113, 177, 0.18));
+				        filter: drop-shadow(0 0 12px rgba(57, 113, 177, 0.18));
+		}
+}
+@keyframes breathe {
+		0%, 100% {
+				-webkit-transform: scale(1);
+				        transform: scale(1);
+				opacity: 1;
+				-webkit-filter: drop-shadow(0 0 0 rgba(57, 113, 177, 0));
+				        filter: drop-shadow(0 0 0 rgba(57, 113, 177, 0));
+		}
+		50% {
+				-webkit-transform: scale(1.12);
+				        transform: scale(1.12);
+				opacity: 0.88;
+				-webkit-filter: drop-shadow(0 0 12px rgba(57, 113, 177, 0.18));
+				        filter: drop-shadow(0 0 12px rgba(57, 113, 177, 0.18));
 		}
 }
