--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -1148,6 +1148,11 @@ footer {
 				.rhs {
 					margin-bottom: 47px;
 					.toTopWrapper {
+						.toTop {
+							img {
+								border: 1px solid white;
+							}
+						}
 					}
 					.newsLetter {
 						padding: 0;
