--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -957,7 +957,7 @@ footer {
 					top: unset;
 					bottom: 0;
 					transform: translateY(100%);
-					// filter: drop-shadow(5px 26px 30px #c3c3c3);
+					filter: drop-shadow(0px 28px 15px #bdbdbd);
 				}
 			}
 			.linksWrapper {
@@ -974,7 +974,7 @@ footer {
 				a {
 					position: relative;
 					margin: 0;
-					width: 80%;
+					width: calc(90 / 100 * var(--container-width));
 					padding: 20px 0;
 					&:after {
 						content: '';
