--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -118,7 +118,7 @@ body {
 input {
 	font-family: var(--font-family-helvetica);
 	&.error {
-		outline: 1px solid red !important;
+		border: 1px solid red !important;
 		border-radius: 6px;
 	}
 }
