--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -481,12 +481,20 @@ main .outerWrapper .innerWrapper .lhs .formWrapper form .selectWrapper select op
 		display: none;
 }
 main .outerWrapper .innerWrapper .lhs .formWrapper form .subSelectWrapper {
-		display: none;
+		visibility: hidden;
+		opacity: 0;
+		-webkit-transform: translateY(-100%);
+		        transform: translateY(-100%);
+		height: 0;
+		-webkit-transition: ease-in-out 0.5s all;
+		transition: ease-in-out 0.5s all;
 }
 main .outerWrapper .innerWrapper .lhs .formWrapper form .subSelectWrapper.active {
-		display: -webkit-box;
-		display: -ms-flexbox;
-		display: flex;
+		visibility: visible;
+		opacity: 1;
+		-webkit-transform: unset;
+		        transform: unset;
+		height: unset;
 }
 main .outerWrapper .innerWrapper .rhs {
 		padding-left: 100.5px;
