--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -435,9 +435,16 @@ main {
 							}
 						}
 						.subSelectWrapper {
-							display: none;
+							visibility: hidden;
+							opacity: 0;
+							transform: translateY(-100%);
+							height: 0;
+							transition: ease-in-out .5s all;
 							&.active {
-								display: flex;
+								visibility: visible;
+								opacity: 1;
+								transform: unset;
+								height: unset;
 							}
 						}
 					}
